--- a/style.css
+++ b/style.css
@@ -145,6 +145,7 @@ header {
     font-size: 20px;
     text-align: center;
     padding: 0px 10px;
+    width: 90%;
   }
   .footer-heading {
     font-size: 15px;
